Use isBlank() for the blank name-part checks